# voc-intelligence-platform

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/raw/: UN50U7900FFXZA_reviews.json  UN50U7900FFXZA_spec.json
data/raw/RF24BB6600QLAA/: page.html  page_meta.json  reviews.json  spec.json
data/raw/UN32F6000FFXZA/: page.html  page_meta.json  reviews.json  spec.json
data/raw/UN40F6000FFXZA/: page.html  page_meta.json  reviews.json  spec.json
data/raw/UN50U7900FFXZA/: competitors.json  page.html  page_meta.json  spec.json  (+1 more)
data/reports/: RF24BB6600QLAA_voc_result.json  RF24BB6600QLAA_voc_result.manifest.json  UN50U7900FFXZA_voc_report_20260616_1753.md  UN50U7900FFXZA_voc_report_20260616_1800.md  UN50U7900FFXZA_voc_result.json  UN50U7900FFXZA_voc_result.manifest.json
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  utils.ts
scripts/: regenerate_marketing_section.py
src/: cli.py  config.py
src/agents/: base.py  competitive_positioning.py  complaint_analysis.py  contradiction_analysis.py  cx_action_agent.py  expectation_gap.py  importance_analysis.py  marketing_analysis.py  report_generation.py  review_cleaning.py  satisfaction_analysis.py  segment_divergence.py  sentiment_analysis.py  voc_taxonomy.py
src/api/: routes.py  state.py
src/data/: competitor_spec_fetcher.py  models.py  product_discovery.py  scraper.py  spec_extractor.py
src/rag/: chunker.py  embedder.py  retriever.py  vector_store.py
src/reports/: generator.py
src/workflow/: cache.py  graph.py  state.py
(+16 files in other folders)
