[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voc-intelligence-platform"
version = "1.0.0"
description = "Samsung TV VOC Intelligence Platform - AI-powered customer review analysis"
requires-python = ">=3.11"
dependencies = [
    # Anthropic (direct + OpenRouter compatible)
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    # LangGraph / LangChain
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    # Vector DBs
    "qdrant-client>=1.11.0",
    "pinecone-client>=5.0.0",
    # FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Data
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # Scraping
    "playwright>=1.48.0",
    "beautifulsoup4>=4.12.0",
    # Processing
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "tenacity>=9.0.0",
    "aiofiles>=24.1.0",
    # PDF
    "pymupdf>=1.24.0",
    # Output
    "rich>=13.9.0",
    "typer>=0.13.0",
    "jinja2>=3.1.0",
    "markdown>=3.7.0",
]

[project.scripts]
voc = "src.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
